# Lorescribe

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README  README.md  SETUP.txt  build-and-push.sh  docker-compose.yml  docker-entrypoint.sh  mongo-init.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.sh  setup.sh  terraform.tfvars.example
.github/workflows/: deploy.yml
guild-configs/: 1315144523336122469.json
k8s/: deploy.sh  discord-bot.yaml  redis.yaml
scripts/: build-and-push.sh  droplet-setup.sh
src/: CommandHandler.js  VoiceRecorder.js  bot.js  config.js  config.test.js  deploy-commands.js  index.js  server.js  test.js
src/commands/: BaseCommand.js  CommandRegistry.js  RecordCommand.js  SetChannelCommand.js  SetKeyCommand.js  SetTimeIntervalCommand.js  SlashCommands.js  StatusCommand.js  StopCommand.js
src/config/: redis.js
src/events/: RecordingEvents.js
src/exceptions/: exceptions.js
src/interfaces/: IAudioService.js  IConfigurationService.js  IService.js  ITranscriptionService.js
src/scripts/: 681842093630816306.json
src/services/: AudioService.js  ChannelService.js  ConfigurationService.js  Container.js  JobService.js  RecordingProcessorService.js  ServiceFactory.js  StorageService.js  SummaryJobService.js  TranscriptionService.js  VoiceStateService.js
src/tests/: AudioService.test.js  ConfigurationService.test.js  Container.test.js  ServiceFactory.test.js  TranscriptionService.test.js  VoiceRecorder.test.js  (+4 more)
terraform/: .gitignore  README.md  main.tf  terraform.tfvars.develop  tfplan  variables.tf
(+44 files in other folders)
