[tool.poetry]
name = "summarizerbot"
version = "0.1.0"
description = "Discord bot that records, transcribes, and summarizes voice conversations"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.6.0"
python-dotenv = "^1.0.0"
openai = "^1.12.0"
pynacl = "^1.5.0"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3 